--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header class="shadow-md sticky top-0 z-10 bg-black bg-opacity-80">
     <div class="container mx-auto px-4 py-6">
       <div class="flex items-center gap-6">
-        <img src="C:\Users\nihar\OneDrive - Carleton University\Documents\profilepic.jpeg"  alt="Niharika Ramireddy headshot"
+        <img src="profilepic.jpeg"  alt="Niharika Ramireddy headshot"
              class="w-28 h-28 rounded-full object-cover shadow ring-4 ring-white"/>
         <div>
           <h1 class="text-3xl font-bold text-white">Niharika Ramireddy</h1>
@@ -260,3 +260,4 @@
 
 </body>
 </html>
+
